--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/sample.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/sample.fxml
@@ -1,8 +1,30 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="edu.ung.mccb.csci.csci3300.customer_review.controller.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
+
+<GridPane alignment="center" hgap="10" prefHeight="599.0" prefWidth="703.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.customer_review.controller.Controller">
+   <children>
+      <AnchorPane prefHeight="596.0" prefWidth="699.0">
+         <children>
+            <TextField layoutX="63.0" layoutY="102.0" promptText="Username" />
+            <TextField layoutX="393.0" layoutY="102.0" promptText="Password" />
+            <TextField layoutX="63.0" layoutY="157.0" promptText="Display Name" />
+            <TextField layoutX="63.0" layoutY="221.0" prefHeight="27.0" prefWidth="364.0" promptText="Email Adress" />
+            <Text layoutX="201.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Sign Up" textAlignment="CENTER" wrappingWidth="266.21875" />
+            <Button layoutX="305.0" layoutY="503.0" mnemonicParsing="false" text="Submit" />
+         </children>
+      </AnchorPane>
+   </children>
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
