--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/sample.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/sample.fxml
@@ -16,7 +16,7 @@
             <TextField layoutX="393.0" layoutY="102.0" promptText="Password" />
             <TextField layoutX="63.0" layoutY="157.0" promptText="Display Name" />
             <TextField layoutX="63.0" layoutY="221.0" prefHeight="27.0" prefWidth="364.0" promptText="Email Adress" />
-            <Text layoutX="201.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Sign Up" textAlignment="CENTER" wrappingWidth="266.21875" />
+            <Text layoutX="201.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Registration" textAlignment="CENTER" wrappingWidth="266.21875" />
             <Button layoutX="305.0" layoutY="503.0" mnemonicParsing="false" text="Submit" />
             <Text fill="#ff0808" layoutX="231.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
             <Text fill="#f80303" layoutX="63.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
