Pushing code from rebuild branch
Github doesn't want to merge these SOBs so I'm doing it manually. Pushing it to a new branch just in case this fucks up anyone else's IDE the same way it fucked up mine today.

--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserLogin.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserLogin.fxml
@@ -12,7 +12,7 @@
 
 <!-- TODO create controller for UserLogin and link it to fx:controller -->
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.customer_review.view.UserLogin">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.customer_review.controller.Controller">
    <children>
       <VBox alignment="CENTER" layoutX="141.0" layoutY="85.0">
          <children>
@@ -21,11 +21,11 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <TextField promptText="Username">
+            <TextField fx:id="username" promptText="Username">
                <VBox.margin>
                   <Insets top="16.0" />
                </VBox.margin></TextField>
-            <PasswordField promptText="Password">
+            <PasswordField fx:id="password" promptText="Password">
                <VBox.margin>
                   <Insets top="16.0" />
                </VBox.margin>
@@ -40,7 +40,7 @@
                         <Insets right="8.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Create Account">
+                  <Button mnemonicParsing="false" text="Create Account" onAction="#logUserIn">
                      <HBox.margin>
                         <Insets left="8.0" />
                      </HBox.margin>
