--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserRegister.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserRegister.fxml
@@ -12,16 +12,17 @@
    <children>
       <AnchorPane prefHeight="610.0" prefWidth="699.0">
          <children>
-            <TextField layoutX="63.0" layoutY="102.0" promptText="Username" />
-            <TextField layoutX="393.0" layoutY="102.0" promptText="Password" />
-            <TextField layoutX="63.0" layoutY="157.0" promptText="Display Name" />
-            <TextField layoutX="63.0" layoutY="221.0" prefHeight="27.0" prefWidth="364.0" promptText="Email Adress" />
+            <TextField fx:id="username" layoutX="63.0" layoutY="102.0" promptText="Username" />
+            <TextField fx:id="password" layoutX="393.0" layoutY="102.0" promptText="Password" />
+            <TextField fx:id="displayName" layoutX="63.0" layoutY="157.0" promptText="Display Name" />
+            <TextField fx:id="cpassword" layoutX="393.0" layoutY="157.0" promptText="Verify Password" />
+            <TextField fx:id="email" layoutX="63.0" layoutY="221.0" prefHeight="27.0" prefWidth="364.0" promptText="Email Address" />
             <Text layoutX="201.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Registration" textAlignment="CENTER" wrappingWidth="266.21875" />
-            <Button layoutX="296.0" layoutY="376.0" mnemonicParsing="false" onAction="#userCreate" text="Submit" />
+            <Button layoutX="296.0" layoutY="376.0" mnemonicParsing="false" onAction="#registerUser" text="Submit" />
             <Text fill="#ff0808" layoutX="231.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
             <Text fill="#f80303" layoutX="63.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" />
             <Text layoutX="69.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" means field is optional" />
-            <TextField layoutX="393.0" layoutY="157.0" promptText="Verify Password" />
+
          </children>
       </AnchorPane>
    </children>
