--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserReview.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserReview.fxml
@@ -22,7 +22,7 @@
             <Text layoutX="30.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Product Rating" />
             <ImageView fitHeight="68.0" fitWidth="149.0" layoutX="15.0" layoutY="359.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <!-- <Image url="@CaptchaImage.jpg" /> commented out because it was causing errors TODO: Darius plz fix -->
+                  <Image url="@1j93k9L.jpg" /> 
                </image>
             </ImageView>
             <TextField fx:id="captcha" layoutX="25.0" layoutY="441.0" prefHeight="4.0" prefWidth="116.0" promptText="Enter Captcha." />
