--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/ProductReview.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/ProductReview.fxml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.ung.mccb.csci.csci3300.customer_review.view.ProductReview"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121" fx:controller="edu.ung.mccb.csci.csci3300.customer_review.view.ProductReview">
             <children>
                 <ScrollPane>
                     <ListView>
                         <items>
                             <FXCollections fx:factory="observableArrayList">
-                                <String fx:value="One"/>
-                                <String fx:value="Two"/>
-                                <String fx:value="Three"/>
-                                <String fx:value="Four"/>
-                                <String fx:value="Five"/>
+                                <String fx:value="Scrolling list for reviews test 1" />
+                                <String fx:value="Scrolling list for reviews test 2" />
+                                <String fx:value="Scrolling list for reviews test 3" />
+                                <String fx:value="Scrolling list for reviews test 4" />
+                                <String fx:value="Scrolling list for reviews test 5" />
                             </FXCollections>
                         </items>
                     </ListView>
