--- a/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserReview.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/customer_review/view/UserReview.fxml
@@ -13,7 +13,7 @@
       <Pane layoutX="-2.0" prefHeight="600.0" prefWidth="600.0" stylesheets="@../css/main.css">
          <children>
             <Text fx:id="title" layoutX="231.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Submit A Review" textAlignment="CENTER" />
-            <TextArea fx:id="reviewText" layoutX="27.0" layoutY="117.0" prefHeight="200.0" prefWidth="546.0" />
+            <TextArea fx:id="reviewText" layoutX="27.0" layoutY="117.0" prefHeight="200.0" prefWidth="546.0" wrapText="true" />
             <Slider fx:id="ratingSlider" blockIncrement="1.0" layoutX="30.0" layoutY="68.0" majorTickUnit="1.0" min="1.0" max="5.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true">
                </Slider>
             <Button layoutX="452.0" layoutY="411.0" mnemonicParsing="false" onAction="#saveToDB" prefHeight="27.0" prefWidth="121.0" text="Submit Review" />
